--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@fortawesome/react-fontawesome": "^3.1.0",
     "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.3.8",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
     "recharts": "^3.3.0"
