--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
