--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@paypal/checkout-server-sdk": "^1.0.3",
     "@paypal/paypal-server-sdk": "^1.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "apexcharts": "^5.3.6",
     "axios": "^1.13.2",
     "body-parser": "^2.2.1",
     "bootstrap": "^5.3.8",
@@ -25,6 +26,7 @@
     "embla-carousel-react": "^8.6.0",
     "express": "^5.1.0",
     "react": "^19.1.1",
+    "react-apexcharts": "^1.9.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
