--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "express": "^5.1.0",
+    "joi": "^18.0.2",
     "react": "^19.1.1",
     "react-apexcharts": "^1.9.0",
     "react-bootstrap": "^2.10.10",
